--- a/Android/PlayerProj/app/src/main/res/layout/activity_anim_simple_demo.xml
+++ b/Android/PlayerProj/app/src/main/res/layout/activity_anim_simple_demo.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg">
+    android:background="@android:color/black">
 
 
     <LinearLayout
         android:id="@+id/btnLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:orientation="horizontal"
+        tools:visibility="visible"
         android:visibility="gone">
         <Button
             android:id="@+id/btnPlay"
@@ -24,14 +25,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="STOP"/>
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/seek_bar"
+            android:layout_gravity="bottom"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
 
     </LinearLayout>
 
-    
+
     <com.tencent.qgame.animplayer.AnimView
         android:id="@+id/playerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"/>
-    
+
 </FrameLayout>
