--- a/Android/PlayerProj/app/src/main/res/layout/activity_sample_lottie_animation.xml
+++ b/Android/PlayerProj/app/src/main/res/layout/activity_sample_lottie_animation.xml
@@ -7,10 +7,25 @@
     tools:context=".SampleLottieAnimationActivity">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:lottie_autoPlay="true"
+        android:id="@+id/lottie_view"
+        android:layout_width="250dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="654:756"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="false"
         app:lottie_fileName="lottie/data.json"
         app:lottie_imageAssetsFolder="lottie/images"
-        app:lottie_loop="true" />
+        app:lottie_loop="false" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_preview"
+        android:layout_width="150dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="654:756"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lottie_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
