--- a/Android/PlayerProj/app/src/main/res/layout/activity_sample_lottie_animation.xml
+++ b/Android/PlayerProj/app/src/main/res/layout/activity_sample_lottie_animation.xml
@@ -7,25 +7,88 @@
     tools:context=".SampleLottieAnimationActivity">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_view"
-        android:layout_width="250dp"
+        android:id="@+id/lottie_view_bg"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="654:756"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/lottie_view_fg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="false"
-        app:lottie_fileName="lottie/data.json"
-        app:lottie_imageAssetsFolder="lottie/images"
+        app:lottie_fileName="lottie/bg/data.json"
+        app:lottie_imageAssetsFolder="lottie/bg/images"
+        app:lottie_loop="false" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_view_fg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="654:756"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/lottie_view_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="false"
+        app:lottie_fileName="lottie/fg/data.json"
+        app:lottie_imageAssetsFolder="lottie/fg/images"
         app:lottie_loop="false" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_preview"
+        android:id="@+id/iv_preview_bg"
         android:layout_width="150dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintDimensionRatio="654:756"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lottie_view" />
+        app:layout_constraintEnd_toEndOf="@id/lottie_view_bg"
+        app:layout_constraintStart_toStartOf="@id/lottie_view_bg"
+        app:layout_constraintTop_toBottomOf="@id/lottie_view_bg" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_preview_fg"
+        android:layout_width="150dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintDimensionRatio="654:756"
+        app:layout_constraintEnd_toEndOf="@id/lottie_view_fg"
+        app:layout_constraintStart_toStartOf="@id/lottie_view_fg"
+        app:layout_constraintTop_toBottomOf="@id/lottie_view_fg" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="start"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_process"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="process"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_start" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_merge_mp4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="merge video"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_process" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_ffmpeg_format"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="log ffmpeg format"
+        android:textAllCaps="false"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_merge_mp4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
