--- a/Android/PlayerProj/app/src/main/res/layout/activity_main.xml
+++ b/Android/PlayerProj/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="sample lottie animation" />
+        <Button
+            android:id="@+id/btn6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="sample lottie blend" />
 
     </LinearLayout>
 
