--- a/Android/PlayerProj/app/src/main/res/layout/activity_sample_lottie_blend.xml
+++ b/Android/PlayerProj/app/src/main/res/layout/activity_sample_lottie_blend.xml
@@ -9,7 +9,7 @@
 
     <com.at.lottie.LottieBlendView
         android:id="@+id/lottie_view"
-        android:layout_width="250dp"
+        android:layout_width="1080px"
         android:layout_height="0dp"
         app:blend_bg_fileName="lottie/bg/data.json"
         app:blend_bg_imageAssetsFolder="lottie/bg/images"
