--- a/Android/PlayerProj/app/src/main/res/layout/activity_sample_lottie_blend.xml
+++ b/Android/PlayerProj/app/src/main/res/layout/activity_sample_lottie_blend.xml
@@ -9,7 +9,7 @@
 
     <com.at.lottie.LottieBlendView
         android:id="@+id/lottie_view"
-        android:layout_width="1080px"
+        android:layout_width="300dp"
         android:layout_height="0dp"
         app:blend_bg_fileName="lottie/bg/data.json"
         app:blend_bg_imageAssetsFolder="lottie/bg/images"
@@ -20,6 +20,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_preview"
+        app:layout_constraintTop_toBottomOf="@id/lottie_view"
+        app:layout_constraintStart_toStartOf="@id/lottie_view"
+        app:layout_constraintEnd_toEndOf="@id/lottie_view"
+        app:layout_constraintDimensionRatio="654:756"
+        android:layout_width="300dp"
+        android:layout_height="0dp"/>
 
 
     <androidx.appcompat.widget.AppCompatButton
