--- a/Android/PlayerProj/app/src/main/res/layout/activity_sample_gpu_view.xml
+++ b/Android/PlayerProj/app/src/main/res/layout/activity_sample_gpu_view.xml
@@ -17,6 +17,17 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText"
         tools:visibility="visible" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_start_auto_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="start auto value"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        app:layout_constraintStart_toEndOf="@id/btn_load_image"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText"
+        tools:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
