--- a/Android/PlayerProj/app/src/main/res/layout/activity_simple_face_detect.xml
+++ b/Android/PlayerProj/app/src/main/res/layout/activity_simple_face_detect.xml
@@ -9,5 +9,5 @@
         android:id="@+id/iv_preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerInside" />
 </androidx.constraintlayout.widget.ConstraintLayout>
