--- a/Android/PlayerProj/app/src/main/res/layout/activity_sample_open_cvmat.xml
+++ b/Android/PlayerProj/app/src/main/res/layout/activity_sample_open_cvmat.xml
@@ -94,5 +94,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/seek_bar2" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_load_png"
+        android:textAllCaps="false"
+        android:text="load png"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/seek_bar3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="HardcodedText" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
